--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,8 +65,8 @@ body {
     width: 300px;
     height: 400px;
     border-radius: 6px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-        rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    overflow: hidden;
 }
 
 /* Login box style */
