--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,27 @@ body {
 }
 
 /* Chat box style */
+
+.menu {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 6px;
+    height: 40px;
+    border-bottom: 1px solid #ccc;
+}
+
+.logout-button {
+    background-color: rgb(255, 75, 75);
+    color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 6px 8px;
+    border-radius: 4px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
 .chat-box {
     display: flex;
     flex-direction: column;
